# cargo-specification

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  Specification.toml  index.html
.github/workflows/: gh-pages.yml  releases.yml
examples/consensus/: Specification.toml
examples/consensus/consensus-types/src/: block.rs  block_data.rs
examples/consensus/src/: overview.rs
spec/: template.md
src/: build.rs  comment_parser.rs  errors.rs  git.rs  init.rs  lib.rs  main.rs  toml_parser.rs
src/formats/: markdown.rs  mod.rs  respec.rs
template/: specification.html
templates/: respec.html  specification.html
