[package]
name = "specification"
description = "heyhey"
version = "0.1.0"
authors = ["David Wong <davidwg@calibra.com>"]
edition = "2018"

[dependencies]
askama = "0.11.0" # HTML template
clap = "3.0.1" # CLI
comrak = "0.12.1" # markdown
serde = { version = "1.0.133", features = ["derive"] } # deserialize toml
tinytemplate = "1.1" # simple template
toml = { version = "0.5.8", features = ["preserve_order"] } # deserialize toml
